<resources>
    <string name="app_name">SFTP Android Sample</string>
    <string name="connect_title">Connect</string>
    <string name="download_title">Start Download</string>
    <string name="host_name_label">Host Name:</string>
    <string name="port_label">Port:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="src_path_label">Source Path:</string>
    <string name="src_file_label">Source File:</string>
    <string name="dst_path_label">Destination Path:</string>
    <string name="dst_file_label">Destination File:</string>
    <string name="install_title">Install</string>
    <string name="file_size_label">File Size:</string>
    <string name="file_label">File:</string>
</resources>
