<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sample.sftpandroidsample.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/host_name_label"/>

                <EditText
                    android:id="@+id/txt_host_name"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/port_label"/>

                <EditText
                    android:id="@+id/txt_port"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/username_label"/>

                <EditText
                    android:id="@+id/txt_username"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/password_label"/>

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ProgressBar
                    android:id="@+id/bar_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/connect_title"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/download_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/src_path_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_src_path"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/src_file_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_src_file"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/dst_path_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_dst_path"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/dst_file_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_dst_file"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/btn_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download_title"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/saved_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/file_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_file"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/file_size_label"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/txt_file_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/btn_install"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_title"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
